= What's New in BridgePoint 7.4

== Release Highlights
* Verifier bug fixes and improvements
  ** Support for interface message parameters of instance reference types
  ** "Select many" bug fix
  ** Associative link cardinality bug fix
  ** Session explorer display fix
  ** Include JDT in the modeler version of the tool
* Association editor fixes and improvements
  ** Migrating link class fix
  ** Support for "symmetric" reflexive associations
* Support for ARM64 architecture for MacOS and Linux