@@ -19,6 +19,12 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Upgrade to Eclipse 2022-12</p>
+</li>
+<li>
+<p>Support for ARM64 architecture for MacOS and Linux</p>
+</li>
+<li>
 <p>Verifier bug fixes and improvements</p>
 <div class="ulist">
 <ul>
@@ -52,9 +58,6 @@
 </li>
 </ul>
 </div>
-</li>
-<li>
-<p>Support for ARM64 architecture for MacOS and Linux</p>
 </li>
 </ul>
 </div>
